--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "loopback-filter-by-relations-mixin",
   "version": "1.0.0",
-  "description": "Mixin",
-  "main": "./lib/index.js",
+  "description": "Loopback mixin that supports filtering using nested 'where' conditions for relations",
+  "main": "./filter-by-relations.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/**",
+    "coverage": "nyc --reporter=text-summary mocha test/**"
   },
   "keywords": [
     "loopback",
