--- a/package.json
+++ b/package.json
@@ -26,5 +26,17 @@
     "chai": "^4.2.0",
     "loopback": "^3.27.0",
     "nyc": "^15.0.0"
-  }
+  },
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yuranevmer/loopback-filter-by-reations-mixin.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yuranevmer/loopback-filter-by-reations-mixin/issues"
+  },
+  "homepage": "https://github.com/yuranevmer/loopback-filter-by-reations-mixin#readme"
 }
