--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./filter-by-relations.js",
   "scripts": {
     "test": "mocha test/**",
-    "coverage": "nyc --reporter=text-summary mocha test/**"
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "keywords": [
     "loopback",
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "coveralls": "^3.0.11",
     "loopback": "^3.27.0",
     "nyc": "^15.0.0"
   },
