--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chai": "^4.2.0",
     "coveralls": "^3.0.11",
     "loopback": "^3.27.0",
+    "mocha": "^7.1.1",
     "nyc": "^15.0.0"
   },
   "directories": {
