--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./filter-by-relations.js",
   "scripts": {
     "test": "mocha test/**",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "keywords": [
     "loopback",
